--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 20:05:02 2018</p>
+         Last Run: Sun Nov 25 21:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -33,36 +33,36 @@
                         <td>Overcast</td>
                         <td>1</td>
                         <td>-2</td>
-                        <td>6</td>
-                        <td>81</td>
+                        <td>7</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>SSW</td>
-                        <td>91</td>
+                        <td>SW</td>
+                        <td>94</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Overcast</td>
-                        <td>1</td>
-                        <td>-2</td>
-                        <td>12</td>
-                        <td>78</td>
+                        <td>2</td>
+                        <td>-1</td>
+                        <td>13</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>89</td>
+                        <td>92</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
-                        <td>1</td>
-                        <td>-2</td>
+                        <td>2</td>
+                        <td>-1</td>
                         <td>11</td>
-                        <td>79</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>90</td>
+                        <td>91</td>
                      </tr>
                   </tbody>
                </table>
@@ -90,8 +90,8 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-2",
-                 "-2",
-                 "-2"
+                 "-1",
+                 "-1"
                ]
              },
              {
@@ -102,8 +102,8 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "1",
-                 "1",
-                 "1"
+                 "2",
+                 "2"
                ]
              }
            ]
@@ -160,8 +160,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "6",
-                 "12",
+                 "7",
+                 "13",
                  "11"
                ]
              },
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "81",
-                 "78",
-                 "79"
+                 "80",
+                 "77",
+                 "78"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "91",
-                 "89",
-                 "90"
+                 "94",
+                 "92",
+                 "91"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 20:05:02 2018</p>
+         Last Run: Sun Nov 25 21:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -258,24 +258,24 @@
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
-                        <td>-4</td>
-                        <td>-8</td>
+                        <td>-3</td>
+                        <td>-6</td>
                         <td>4</td>
-                        <td>81</td>
+                        <td>82</td>
                         <td>0</td>
-                        <td>10</td>
-                        <td>WSW</td>
+                        <td>8</td>
+                        <td>W</td>
                         <td>5</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
                         <td>-4</td>
-                        <td>-8</td>
+                        <td>-7</td>
                         <td>4</td>
-                        <td>84</td>
+                        <td>86</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>WSW</td>
                         <td>4</td>
                      </tr>
@@ -305,8 +305,8 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-6",
-                 "-8",
-                 "-8"
+                 "-6",
+                 "-7"
                ]
              },
              {
@@ -317,7 +317,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-3",
-                 "-4",
+                 "-3",
                  "-4"
                ]
              }
@@ -387,8 +387,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "79",
-                 "81",
-                 "84"
+                 "82",
+                 "86"
                ]
              },
              {
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 20:05:02 2018</p>
+         Last Run: Sun Nov 25 21:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -463,7 +463,7 @@
                         <td>Partly Cloudy</td>
                         <td>-2</td>
                         <td>-5</td>
-                        <td>22</td>
+                        <td>24</td>
                         <td>66</td>
                         <td>1</td>
                         <td>8</td>
@@ -472,23 +472,23 @@
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>-2</td>
-                        <td>-6</td>
-                        <td>23</td>
+                        <td>Snow Showers</td>
+                        <td>-1</td>
+                        <td>-4</td>
+                        <td>33</td>
                         <td>64</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>N</td>
                         <td>68</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Snow Showers</td>
                         <td>-2</td>
                         <td>-6</td>
-                        <td>24</td>
-                        <td>65</td>
+                        <td>34</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>10</td>
                         <td>N</td>
@@ -520,7 +520,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-5",
-                 "-6",
+                 "-4",
                  "-6"
                ]
              },
@@ -532,7 +532,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-2",
-                 "-2",
+                 "-1",
                  "-2"
                ]
              }
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "22",
-                 "23",
-                 "24"
+                 "24",
+                 "33",
+                 "34"
                ]
              },
              {
@@ -603,7 +603,7 @@
                "data":[
                  "66",
                  "64",
-                 "65"
+                 "64"
                ]
              },
              {
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 20:05:02 2018</p>
+         Last Run: Sun Nov 25 21:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -675,11 +675,11 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Snow Showers</td>
+                        <td>Overcast</td>
                         <td>-5</td>
                         <td>-9</td>
-                        <td>33</td>
-                        <td>71</td>
+                        <td>24</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>10</td>
                         <td>NNW</td>
@@ -690,12 +690,12 @@
                         <td>Snow Showers</td>
                         <td>-4</td>
                         <td>-8</td>
-                        <td>34</td>
+                        <td>33</td>
                         <td>66</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>NNW</td>
-                        <td>78</td>
+                        <td>77</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -805,8 +805,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "24",
                  "33",
-                 "34",
                  "24"
                ]
              },
@@ -816,7 +816,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "71",
+                 "70",
                  "66",
                  "63"
                ]
@@ -828,7 +828,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "81",
-                 "78",
+                 "77",
                  "75"
                ]
              }
