--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 21:05:02 2018</p>
+         Last Run: Sun Nov 25 22:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -33,24 +33,24 @@
                         <td>Overcast</td>
                         <td>1</td>
                         <td>-2</td>
-                        <td>7</td>
+                        <td>6</td>
                         <td>80</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>SW</td>
-                        <td>94</td>
+                        <td>SSW</td>
+                        <td>93</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Overcast</td>
                         <td>2</td>
                         <td>-1</td>
-                        <td>13</td>
-                        <td>77</td>
+                        <td>15</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>92</td>
+                        <td>91</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -62,7 +62,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>91</td>
+                        <td>90</td>
                      </tr>
                   </tbody>
                </table>
@@ -160,8 +160,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "7",
-                 "13",
+                 "6",
+                 "15",
                  "11"
                ]
              },
@@ -172,7 +172,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "80",
-                 "77",
+                 "78",
                  "78"
                ]
              },
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "94",
-                 "92",
-                 "91"
+                 "93",
+                 "91",
+                 "90"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 21:05:02 2018</p>
+         Last Run: Sun Nov 25 22:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -249,7 +249,7 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>4</td>
-                        <td>79</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -258,13 +258,13 @@
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
-                        <td>-3</td>
-                        <td>-6</td>
+                        <td>-4</td>
+                        <td>-7</td>
                         <td>4</td>
-                        <td>82</td>
+                        <td>84</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>W</td>
+                        <td>WSW</td>
                         <td>5</td>
                      </tr>
                      <tr>
@@ -273,7 +273,7 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>4</td>
-                        <td>86</td>
+                        <td>87</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -305,7 +305,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-6",
-                 "-6",
+                 "-7",
                  "-7"
                ]
              },
@@ -317,7 +317,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-3",
-                 "-3",
+                 "-4",
                  "-4"
                ]
              }
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "79",
-                 "82",
-                 "86"
+                 "81",
+                 "84",
+                 "87"
                ]
              },
              {
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 21:05:02 2018</p>
+         Last Run: Sun Nov 25 22:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -472,10 +472,10 @@
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Snow Showers</td>
+                        <td>Mostly Cloudy</td>
                         <td>-1</td>
                         <td>-4</td>
-                        <td>33</td>
+                        <td>24</td>
                         <td>64</td>
                         <td>0</td>
                         <td>8</td>
@@ -487,8 +487,8 @@
                         <td>Snow Showers</td>
                         <td>-2</td>
                         <td>-6</td>
-                        <td>34</td>
-                        <td>64</td>
+                        <td>33</td>
+                        <td>65</td>
                         <td>0</td>
                         <td>10</td>
                         <td>N</td>
@@ -591,8 +591,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "24",
-                 "33",
-                 "34"
+                 "24",
+                 "33"
                ]
              },
              {
@@ -603,7 +603,7 @@
                "data":[
                  "66",
                  "64",
-                 "64"
+                 "65"
                ]
              },
              {
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 25 21:05:02 2018</p>
+         Last Run: Sun Nov 25 22:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -675,11 +675,11 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Snow Showers</td>
                         <td>-5</td>
                         <td>-9</td>
-                        <td>24</td>
-                        <td>70</td>
+                        <td>34</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>10</td>
                         <td>NNW</td>
@@ -690,12 +690,12 @@
                         <td>Snow Showers</td>
                         <td>-4</td>
                         <td>-8</td>
-                        <td>33</td>
+                        <td>34</td>
                         <td>66</td>
                         <td>0</td>
                         <td>11</td>
                         <td>NNW</td>
-                        <td>77</td>
+                        <td>79</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -707,7 +707,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>NNW</td>
-                        <td>75</td>
+                        <td>76</td>
                      </tr>
                   </tbody>
                </table>
@@ -805,8 +805,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "24",
-                 "33",
+                 "34",
+                 "34",
                  "24"
                ]
              },
@@ -816,7 +816,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "70",
+                 "71",
                  "66",
                  "63"
                ]
@@ -828,8 +828,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "81",
-                 "77",
-                 "75"
+                 "79",
+                 "76"
                ]
              }
            ]
