--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 26 00:05:07 2018</p>
+         Last Run: Mon Nov 26 01:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 26, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -33,11 +33,11 @@
                         <td>Overcast</td>
                         <td>2</td>
                         <td>-1</td>
-                        <td>5</td>
-                        <td>80</td>
+                        <td>6</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>SSW</td>
+                        <td>SW</td>
                         <td>93</td>
                      </tr>
                      <tr>
@@ -46,11 +46,11 @@
                         <td>2</td>
                         <td>-1</td>
                         <td>8</td>
-                        <td>77</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>11</td>
                         <td>SW</td>
-                        <td>91</td>
+                        <td>93</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>2</td>
                         <td>-1</td>
                         <td>5</td>
-                        <td>78</td>
+                        <td>76</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>SW</td>
-                        <td>90</td>
+                        <td>96</td>
                      </tr>
                   </tbody>
                </table>
@@ -160,7 +160,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "5",
+                 "6",
                  "8",
                  "5"
                ]
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "80",
-                 "77",
-                 "78"
+                 "79",
+                 "76",
+                 "76"
                ]
              },
              {
@@ -183,8 +183,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "93",
-                 "91",
-                 "90"
+                 "93",
+                 "96"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 26 00:05:07 2018</p>
+         Last Run: Mon Nov 26 01:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 26 00:05:07 2018</p>
+         Last Run: Mon Nov 26 01:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -463,11 +463,11 @@
                         <td>Partly Cloudy</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>13</td>
+                        <td>10</td>
                         <td>71</td>
                         <td>1</td>
                         <td>8</td>
-                        <td>N</td>
+                        <td>NNW</td>
                         <td>43</td>
                      </tr>
                      <tr>
@@ -475,24 +475,24 @@
                         <td>Partly Cloudy</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>14</td>
+                        <td>10</td>
                         <td>67</td>
                         <td>0</td>
                         <td>8</td>
                         <td>N</td>
-                        <td>56</td>
+                        <td>55</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>15</td>
+                        <td>12</td>
                         <td>67</td>
                         <td>0</td>
                         <td>8</td>
                         <td>N</td>
-                        <td>67</td>
+                        <td>66</td>
                      </tr>
                   </tbody>
                </table>
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "13",
-                 "14",
-                 "15"
+                 "10",
+                 "10",
+                 "12"
                ]
              },
              {
@@ -613,8 +613,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "43",
-                 "56",
-                 "67"
+                 "55",
+                 "66"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 26 00:05:07 2018</p>
+         Last Run: Mon Nov 26 01:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -675,22 +675,22 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Snow Showers</td>
                         <td>-4</td>
                         <td>-8</td>
-                        <td>24</td>
-                        <td>71</td>
+                        <td>33</td>
+                        <td>70</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>NNW</td>
                         <td>80</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>24</td>
+                        <td>33</td>
                         <td>64</td>
                         <td>0</td>
                         <td>11</td>
@@ -699,10 +699,10 @@
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>24</td>
+                        <td>33</td>
                         <td>60</td>
                         <td>0</td>
                         <td>10</td>
@@ -805,9 +805,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "24",
-                 "24",
-                 "24"
+                 "33",
+                 "33",
+                 "33"
                ]
              },
              {
@@ -816,7 +816,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "71",
+                 "70",
                  "64",
                  "60"
                ]
